--- a/.env
+++ b/.env
@@ -7,14 +7,14 @@ MONGO_HOST=estudiorocha-t104t.mongodb.net
 MONGO_USER=estudiorocha
 MONGO_PASS=faAr2010
 MONGO_DB = aimar
-URL = http://localhost:8000
+URL = https://aimar-meli-backend.herokuapp.com/
 
 //MELI
 APP_ID = 8985559809549694
 //APP_ID = 7886107849656513
 APP_SECRET = KDvzmJ0QJWpNYB34PvvaxaAnTmOX1TaJ
 //APP_SECRET = qpmHgTrLTYlff4gA8PUsE8mqjsgDE3ki
-REDIRECT_URI = http://localhost:8000
+REDIRECT_URI = https://aimar-meli-backend.herokuapp.com/
 USER_ID = 223273281
 //USER_ID = 140101258
 
