--- a/.env
+++ b/.env
@@ -6,25 +6,18 @@ TZ= America/Argentina/Buenos_Aires
 MONGO_HOST=estudiorocha-t104t.mongodb.net
 MONGO_USER=estudiorocha
 MONGO_PASS=faAr2010
-MONGO_DB = aimar
-URL = https://aimar-meli-backend.herokuapp.com
+MONGO_DB = pintureria-ariel
+URL = https://pintureriaariel-meli-backend.herokuapp.com
 
 //MELI
-APP_ID = 8985559809549694
-//APP_ID = 7886107849656513
-APP_SECRET = KDvzmJ0QJWpNYB34PvvaxaAnTmOX1TaJ
-//APP_SECRET = qpmHgTrLTYlff4gA8PUsE8mqjsgDE3ki
-REDIRECT_URI = https://aimar-meli-backend.herokuapp.com
-USER_ID = 223273281
-//USER_ID = 140101258
+APP_ID = 2850401307770843
+APP_SECRET = FAyHI1wvuM4Q0ylT0YrlaKh4uBmv1ZNv
+REDIRECT_URI = https://pintureriaariel-meli-backend.herokuapp.com
+USER_ID = 114037529 
 
 //PRODUCTS
-JSON_PRODUCT = https://www.aimarrepuestos.com.ar/exportador/curl/exportador/jsonProducts.php
+JSON_PRODUCT = https://www.pintureriasariel.com.ar/curl/products/list-json.php
 VIDEO_ITEM = 
 
 //DEV
-PORT = 8000
-//APP_ID = 5757202621369035
-//APP_SECRET = DbQn2RQNQ0gxt7hObFDN0kx9Adcfk68X
-//URL = http://localhost:8000
-//REDIRECT_URI = http://localhost:8000
+PORT = 8000 
