--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.0",
     "morgan": "^1.9.1",
+    "compression": "^1.7.4",
     "node-cron": "^2.0.3",
     "nodemon": "^2.0.2"
   }
